[package]
name = "floki"
description = "floki aims to provide reproducible and shareable build tooling by helping you run docker containers interactively from a declarative yaml file."
repository = "https://github.com/Metaswitch/floki"
homepage = "https://metaswitch.github.io/floki/"
readme = "README.md"
keywords = ["docker"]
categories = ["command-line-utilities"]
license = "MIT"

version = "1.2.1"
authors = ["Richard Lupton <richard.lupton@gmail.com>",
           "Max Dymond <max.dymond@metaswitch.com>"]
edition = '2018'
rust-version = '1.57'

[dependencies]
atty = "0.2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
structopt = "0.3"
uuid = { version = "1.7", features = ["v4"] }
yaml-rust = "0.4.4"
simplelog = "0.12"
nix = { version = "0.27", default-features = false, features = ["user"] }
shlex = "1.3"
sha2 = "0.10.8"
anyhow = "1.0.80"
thiserror = "1.0.56"
tera = "1"
serde_json = "1.0.111"
toml = "0.8.9"
shell-words = "1.1.0"

[dev-dependencies]
tempfile = "3.10.0"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
